--- a/corinamarie/side-water.yaml
+++ b/corinamarie/side-water.yaml
@@ -1,6 +1,6 @@
 group: "corinamarie"
 name: "side-water"
-version: "1.0"
+version: "2.0"
 subfolder: "170-terrain"
 
 variants:
@@ -21,7 +21,7 @@ variants:
 info:
   summary: "Replaces the game's default water side texture."
   author: "CorinaMarie"
-  websote: "https://community.simtropolis.com/forums/topic/761567-coris-side-water-shoppe/"
+  website: "https://community.simtropolis.com/forums/topic/761567-coris-side-water-shoppe/"
 
 ---
 assetId: "corinamarie-side-water-peg-brigantine"
