--- a/src/mandelsoft/stoplight-replacement-mod-layout.yaml
+++ b/src/mandelsoft/stoplight-replacement-mod-layout.yaml
@@ -1,7 +1,7 @@
 group: "mandelsoft"
 name: "stoplight-replacement-mod-layout"
 version: "1.1"
-subfolder: "150-mods"
+subfolder: "900-overrides"
 
 variants:
 - variant: {"mandelsoft:stoplight-replacement-mod:layout": "scandi-rhd"}
