--- a/src/mandelsoft/stoplight-replacement-mod.yaml
+++ b/src/mandelsoft/stoplight-replacement-mod.yaml
@@ -1,7 +1,7 @@
 group: "mandelsoft"
 name: "stoplight-replacement-mod"
 version: "1.1"
-subfolder: "150-mods"
+subfolder: "900-overrides"
 
 assets:
 - assetId: "mandelsoft-stoplight-replacement-mod"
