--- a/src/mandelsoft/stoplight-replacement-mod-post.yaml
+++ b/src/mandelsoft/stoplight-replacement-mod-post.yaml
@@ -3,6 +3,9 @@ name: "stoplight-replacement-mod-post"
 version: "1.1"
 subfolder: "900-overrides"
 
+dependencies:
+- "mandelsoft-stoplight-replacement-mod"
+
 variants:
 - variant: {"mandelsoft:stoplight-replacement-mod:post": "france"}
   assets:
