--- a/src/mandelsoft/stoplight-replacement-mod-post.yaml
+++ b/src/mandelsoft/stoplight-replacement-mod-post.yaml
@@ -4,7 +4,7 @@ version: "1.1"
 subfolder: "900-overrides"
 
 dependencies:
-- "mandelsoft-stoplight-replacement-mod"
+- "mandelsoft:stoplight-replacement-mod"
 
 variants:
 - variant: {"mandelsoft:stoplight-replacement-mod:post": "france"}
