--- a/src/pc/mega-props-vol1.yaml
+++ b/src/pc/mega-props-vol1.yaml
@@ -1,10 +1,10 @@
-group: "pclark06"
+group: "pc"
 name: "mega-props-vol1"
 version: "1.0.1"
 subfolder: "100-props-textures"
 
 assets:
-- assetId: "pclark06-mega-props-vol1"
+- assetId: "pc-mega-props-vol1"
 
 info:
   summary: "Mega Prop Pack. This has props for future uploads as well as supersedes the following files:"
@@ -12,7 +12,7 @@ info:
   website: "https://community.simtropolis.com/files/file/32952-pc-mega-props-vol-1/"
 
 ---
-assetId: "pclark06-mega-props-vol1"
+assetId: "pc-mega-props-vol1"
 version: "1.0.1"
 lastModified: "2020-04-13T18:29:27Z"
 url: "https://community.simtropolis.com/files/file/32952-pc-mega-props-vol-1/?do=download"
