--- a/src/pc/mega-props-vol3.yaml
+++ b/src/pc/mega-props-vol3.yaml
@@ -1,10 +1,10 @@
-group: "pclark06"
+group: "pc"
 name: "mega-props-vol3"
 version: "1.0.1"
 subfolder: "100-props-textures"
 
 assets:
-- assetId: "pclark06-mega-props-vol3"
+- assetId: "pc-mega-props-vol3"
 
 info:
   summary: "Mega props 3. Mostly signs, some for future releases."
@@ -14,7 +14,7 @@ info:
   website: "https://community.simtropolis.com/files/file/34787-pc-mega-props-3/"
 
 ---
-assetId: "pclark06-mega-props-vol3"
+assetId: "pc-mega-props-vol3"
 version: "1.0.1"
 lastModified: "2021-12-25T00:04:14Z"
 url: "https://community.simtropolis.com/files/file/34787-pc-mega-props-3/?do=download"
