Removed escaped space characters added by YAML editor for sc4pac

--- a/src/jasoncw/elks-building.yaml
+++ b/src/jasoncw/elks-building.yaml
@@ -7,7 +7,7 @@ info:
   author: "Jasoncw"
   website: "https://community.simtropolis.com/files/file/36532-elks-building/"
   description: |
-    Elks Building is a building in Aspen, Colorado, USA. It's a corner lot for the Chicago tileset.\_
+    Elks Building is a building in Aspen, Colorado, USA. It's a corner lot for the Chicago tileset.
     1x2 growable CS§§§ lot.
     MaxisNite and DarkNite versions included.
   images:
