--- a/src/paulus/coal-and-ore-port-facilities.yaml
+++ b/src/paulus/coal-and-ore-port-facilities.yaml
@@ -17,9 +17,9 @@ info:
     - 7 lots with ore and coal heaps.
     - various lots with single, double, triple or quadruple conveyor belts, to transport ore and coal.
     - various miscellanious lots to spice up your coal yard.
-    Most of the models sit on 1x1 lots, with parts overhanging, to make it easier to combine them and run roads or railways through them. \_
-    All of these lots are eye candy only; so that means none of them are functional. The lots can be found in the Parks menu, and are grouped together.\_
-    The seawalls in the pictures are not included in this set, but the cranes and ship are placed in such a way on their lots that they fit nicely with this particular set of seawalls. The ship model is offset from the center, so that it appears very close to the seawall. \_
+    Most of the models sit on 1x1 lots, with parts overhanging, to make it easier to combine them and run roads or railways through them.
+    All of these lots are eye candy only; so that means none of them are functional. The lots can be found in the Parks menu, and are grouped together.
+    The seawalls in the pictures are not included in this set, but the cranes and ship are placed in such a way on their lots that they fit nicely with this particular set of seawalls. The ship model is offset from the center, so that it appears very close to the seawall.
     I am not entirely satisfied by some of the textures, especially the coal, ore and sand textures. So when (if) I manage to improve my texturing skills, I'll try to update some of the lots in this set, or add new ones. And no nightlights for now.
     I would suggest using some of the excellent prop sets out there to further add detail to the lots.
   images:
