--- a/src/rdg/prop-pack-1.yaml
+++ b/src/rdg/prop-pack-1.yaml
@@ -7,7 +7,7 @@ info:
   author: "robdragon"
   website: "https://community.simtropolis.com/files/file/31374-rdg-prop-pack-1/"
   description: |
-    This is a prop pack that will be\\_ needed for most if not all my lots.
+    This is a prop pack that will be needed for most if not all my lots.
     There's a lot of timed props in this pack. Also normal required props are here to.
     There should not be any problems arising from this pack.
     If you experience any problems please pm me.
