--- a/src/sfbt/arkenbergejoe-random-seasonal-birch-trees.yaml
+++ b/src/sfbt/arkenbergejoe-random-seasonal-birch-trees.yaml
@@ -7,7 +7,7 @@ info:
   author: "Andreas Roth"
   website: "https://community.simtropolis.com/files/file/36530-sfbt-arkenbergejoe-random-seasonal-birch-trees/"
   description: |
-    Similar to PEG's and jeronij's Seasonal Woods, this set features two different lots with seasonal birch trees. All lots have a transparent base texture, so they can be used with every terrain mod. They have a small air cleaning effect, otherwise, they don't impact the environment. Mix and rotate the 1x1 and 2x2 lots to get a more random appearance, and also leave some clearing between the lots now and then for maximum realism.\_Note:\_When plopping the lots, they are empty, the trees will appear at the next change of seasons.
+    Similar to PEG's and jeronij's Seasonal Woods, this set features two different lots with seasonal birch trees. All lots have a transparent base texture, so they can be used with every terrain mod. They have a small air cleaning effect, otherwise, they don't impact the environment. Mix and rotate the 1x1 and 2x2 lots to get a more random appearance, and also leave some clearing between the lots now and then for maximum realism. Note: When plopping the lots, they are empty, the trees will appear at the next change of seasons.
     The Seasonal birch tree lots are located at the bottom of the park menu.
   images:
   - "https://www.simtropolis.com/objects/screens/monthly_2024_10/Birken_01.jpg.8c75720457a4fff9345395b7f2d78513.jpg"
