Remove useless URL query parameters

--- a/src/aln/rrp-fences.yaml
+++ b/src/aln/rrp-fences.yaml
@@ -15,4 +15,4 @@ info:
 assetId: "aln-rrp-fences"
 version: "1.0"
 lastModified: "2023-11-11T07:36:03-08:00"
-url: "https://www.sc4evermore.com/index.php/downloads?task=download.send&id=166:bsc-aln-rrp-fences&catid=20"
+url: "https://www.sc4evermore.com/index.php/downloads?task=download.send&id=166:bsc-aln-rrp-fences"
