--- a/src/vip/vnaoned-props-pack-vol01.yaml
+++ b/src/vip/vnaoned-props-pack-vol01.yaml
@@ -33,7 +33,7 @@ assets:
 - assetId: "vip-vnaoned-props-pack-vol01"
 
 ---
-url: "https://www.sc4evermore.com/index.php/downloads?task=download.send&id=188:vip-vnaoned-props-pack-vol01&catid=22"
+url: "https://www.sc4evermore.com/index.php/downloads?task=download.send&id=188:vip-vnaoned-props-pack-vol01"
 assetId: "vip-vnaoned-props-pack-vol01"
 version: "3"
 lastModified: "2024-02-06T14:28:16Z"
