--- a/src/null-45/dbpf-loading.yaml
+++ b/src/null-45/dbpf-loading.yaml
@@ -18,5 +18,5 @@ info:
 assetId: "null-45-dbpf-loading"
 version: "1.0.4"
 lastModified: "2024-10-19T00:03:24Z"
-url: "https://community.simtropolis.com/files/file/36244-startup-performance-optimization-dll-for-simcity-4/?do=download"
-#url: "https://github.com/0xC0000054/sc4-dbpf-loading/releases/download/v1.0.3/SC4DBPFLoading.zip" # Alternative URL.
+url: "https://github.com/0xC0000054/sc4-dbpf-loading/releases/download/v1.0.4/SC4DBPFLoading.zip"
+nonPersistentUrl: "https://community.simtropolis.com/files/file/36244-startup-performance-optimization-dll-for-simcity-4/?do=download"
