Enable "use-stex-api" in workflow
Forgotten in 58828eb.
See https://github.com/Zasco/sc4pac-channel/commit/a04f7b6e4a65d662ee1bf248bfd35f821b19c84b#r150507304.

--- a/.github/workflows/sc4pac.yaml
+++ b/.github/workflows/sc4pac.yaml
@@ -14,7 +14,7 @@ jobs:
       path: src                      # path to yaml source files, e.g. src/yaml
       channel-label: Zasco's channel           # your name or other suitable label
       deploy-repository: Zasco/sc4pac-channel  # your GitHub repository
-      use-stex-api: false            # optionally enable the STEX API calls if you have a private key
+      use-stex-api: true            # optionally enable the STEX API calls if you have a private key
     secrets:
        stex-api-key: ${{ secrets.STEX_API_KEY }}  # set the STEX_API_KEY under: Settings > Secrets and variables > Actions > Repository secrets
     permissions:
